--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100vh;
- /* display: none;*/
+  display: none;
   justify-content: center;
   align-items: center;
 }
@@ -780,13 +780,13 @@ body {
   background-position: center;
 }
 .socials-dribbble {
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/001-dribbble.svg);  
+  background-image: url(../svg/001-dribbble.svg);  
 }
 .socials-pinterest {
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/002-pinterest.svg);
+  background-image: url(../svg/002-pinterest.svg);
 }
 .socials-twitter {
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg);
+  background-image: url(../svg/003-tumblr.svg);
 }
 
 .copyright {
@@ -920,8 +920,14 @@ body {
   }
 }
 
-
-
+@media (max-width: 1200px) and (orientation: landscape) {
+  .trends-wrap {
+    flex-wrap: nowrap;
+  }
+  .trend-item {
+    flex-basis: 25%;
+  }
+}
 
 
 
@@ -957,9 +963,7 @@ body {
   .nav-list-link a {
     font-size: 20px;
   }
-  /*.show-menu {
-    top: 0;
-  }*/
+  
   .trend-item {
     flex-basis: 100%;
     padding: 90px 15px 15px;
@@ -977,17 +981,13 @@ body {
     font-size: 16px;
     line-height: 20px;
   }
-
-
   
   .wrapper {
     flex-direction: column;
-    }
+  }
   .blog {
     width: 100%;
   }
-
-
   .blog-item {
     padding-bottom: 23px;
   }
@@ -998,14 +998,11 @@ body {
     font-size: 16px;
     line-height: 20px;
   }
-
   .blog-content {
     margin: 0;
     margin-top: 15px;
     width: 100%;
   }
-
-
   .blog-title,
   .blog-text {
     font-size: 14px;
@@ -1044,11 +1041,33 @@ body {
   .shop_post_border {
     margin-top: -60px;
   }
+
   .footer-copyright-link {
     margin: 45px auto;
   }
   .socials-item:not(:last-child) {
     margin-right: 25px;
+  }
+}
+
+
+
+@media (max-width: 641px) and (orientation: landscape) {  
+  .trends-wrap {
+    flex-wrap: wrap;
+  }
+  .trend-item:nth-child(-n + 3) {
+    margin-right: 0;
+  }
+  .trend-item {
+    flex-basis: calc(50% - 5px);
+    flex-grow: 1;
+  }
+  .trend-item:nth-child(odd) {
+    margin-right: 4px;
+  }
+  .trend-item:nth-child(-n + 2) {
+    margin-bottom: 4px;
   }
 }
 
